@@ -1,3 +1,10 @@
+Fri Jun 17 09:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/DLL_ORB/client.cpp:
+        * tests/DLL_ORB/server.cpp:
+          Use the new macro ACE_DYNAMIC_SERVICE_DIRECTIVE to load the
+          libraries
+
 Fri Jun 17 09:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Bug_1551_Regression/test.mpc:
